# byrecc-client

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release-config-check.yml  release.yml
scripts/: render-installer.sh  verify-release-keypair.sh
skills/byrecc/: SKILL.md
skills/byrecc/agents/: openai.yaml
skills/byrecc/references/: errors.md  tools.md
src/: api.rs  clients.rs  credentials.rs  install.rs  main.rs  proxy.rs  state.rs
tests/: diagnostics_test.sh  install_test.sh  release_key_test.sh  render_installer_test.sh  skill_test.sh  uninstall_test.sh
