[package]
name = "byrectl"
version = "0.1.0"
edition = "2024"
description = "Secure installer and local MCP proxy for ByreCC"
license = "MIT"
repository = "https://github.com/xixizhentiaopi/byrecc-client"
homepage = "https://byre.cc"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml_edit = "0.25"
uuid = { version = "1.23", features = ["v4"] }
zeroize = "1.8"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
